[package]
    name = "doop-localizer"
    description = "Implements content localization for the Doop Discord bot."
    categories = ["localization"]
    keywords = ["bot", "discord", "doop", "localization", "translation"]

    version = "0.1.0"
    edition = "2021"
    publish = false

    authors = ["Jaxydog"]
    license = "ISC"
    readme = "README.md"
    repository = "https://github.com/Jaxydog/doop/"

[dependencies]
    clap = { version = "4.3", features = ["derive"] }
    doop-macros = { version = "0.1", path = "../doop-macros" }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    thiserror = "1.0"
