[package]
    name = "doop-macros"
    description = "Defines procedural macro definitions for the Doop Discord bot."
    categories = ["development-tools"]
    keywords = ["bot", "discord", "doop", "macro"]

    version = "0.1.0"
    edition = "2021"
    publish = false

    authors = ["Jaxydog"]
    license = "ISC"
    readme = "README.md"
    repository = "https://github.com/Jaxydog/doop/"

[lib]
    proc-macro = true

[dependencies]
    proc-macro2 = { version = "1.0", features = ["nightly"] }
    quote = "1.0"
    syn = { version = "2.0", features = ["full"] }
