[package]
    name = "doop-storage"
    description = "Implements a file-based storage system for the Doop Discord bot."
    categories = ["database-implementations", "filesystem"]
    keywords = ["bot", "data", "discord", "doop", "storage"]

    version = "0.1.0"
    edition = "2021"
    publish = false

    authors = ["Jaxydog"]
    license = "ISC"
    readme = "README.md"
    repository = "https://github.com/Jaxydog/doop/"

[features]
    default = ["compression", "default-formats", "default-systems"]
    default-formats = ["dep:rmp-serde", "dep:toml"]
    default-systems = []
    compression = ["dep:flate2"]
    encryption = ["dep:argon2", "dep:chacha20poly1305", "dep:zeroize"]

[dependencies]
    argon2 = { version = "0.5", optional = true, features = ["zeroize"] }
    chacha20poly1305 = { version = "0.10", optional = true, features = ["stream"] }
    doop-macros = { version = "0.1", path = "../doop-macros" }
    flate2 = { version = "1.0", optional = true }
    rmp-serde = { version = "1.1", optional = true }
    serde = "1.0"
    thiserror = "1.0"
    toml = { version = "0.7", optional = true, features = ["preserve_order"] }
    zeroize = { version = "1.6", optional = true }
