[package]
    name = "doop-localizer"
    description = "Implements a content localizer for the Doop Discord bot."
    categories = ["localization"]
    keywords = ["bot", "discord", "doop", "localization", "translation"]

    version = "0.1.0"
    edition.workspace = true
    publish = false

    authors.workspace = true
    license.workspace = true
    readme.workspace = true
    repository.workspace = true

[dependencies]
    clap = { version = "4.4", features = ["derive"] }
doop-threads = { version = "0.1.0", path = "../doop-threads" }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    thiserror = "1.0"
