[package]
    name = "doop-localizer"
    description = "Implements a content localizer for the Doop Discord bot."
    categories = ["localization"]
    keywords = ["bot", "discord", "doop", "localization", "translation"]

    version = "0.1.0"
    edition.workspace = true
    publish = false

    authors.workspace = true
    license.workspace = true
    readme.workspace = true
    repository.workspace = true

[dependencies]
    clap = { version = "4.5", features = ["derive"] }
    doop-logger = { version = "*", path = "../doop-logger" }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    thiserror = "1.0"
