[package]
    name = "doop-storage"
    description = "Provides a data storage interface for the Doop Discord bot."
    categories = ["database-implementations", "filesystem"]
    keywords = ["bot", "data", "discord", "doop", "storage"]

    version = "0.1.0"
    edition.workspace = true
    publish = false

    authors.workspace = true
    license.workspace = true
    readme.workspace = true
    repository.workspace = true

[features]
    default = []
    full = ["compress", "encrypt", "formats"]
    compress = ["dep:flate2"]
    encrypt = ["dep:argon2", "dep:chacha20poly1305", "dep:zeroize"]
    formats = ["dep:rmp-serde", "dep:serde_json", "dep:toml"]

[dependencies]
    argon2 = { version = "0.5", features = ["zeroize"], optional = true }
    chacha20poly1305 = { version = "0.10", features = ["stream"], optional = true }
    flate2 = { version = "1.0", optional = true }
    rmp-serde = { version = "1.1", optional = true }
    serde = "1.0"
    serde_json = { version = "1.0", optional = true, features = ["preserve_order"] }
    thiserror = "1.0"
    toml = { version = "0.8", optional = true, features = ["preserve_order"] }
    zeroize = { version = "1.6", optional = true }
